# scrapyard

./: README.md
lang/c/: primes_1.c
lang/haskell/LearnYouAHaskell/: solveRPN.hs
lang/haskell/PrimePix/: Main.hs  primepix.cabal
lang/haskell/RealWorldHaskell/: CharCount.hs  LineCount.hs  WordCount.hs  xDrop.hs
lang/php/: Zalgo.php
lang/python/: mandelbrot.py
lang/shell/: slackwall.sh
prog/qucs/: FM-AM.dpl  FM-AM.sch
